Started Vue CLI Learning

--- a/Local_cdn/index.html
+++ b/Local_cdn/index.html
@@ -54,10 +54,12 @@
         <div v-show="showIntro">Hey, this is created using v-show!</div>
         <!-- Mouse events -->
 
-        <!-- <div class="box" @mouseover = "handleEvent">Mouse over (enter)</div>
+    <!-- 
+        <div class="box" @mouseover = "handleEvent">Mouse over (enter)</div>
         <div class="box" @mouseleave = "handleEvent">Mouse Leave</div>
         <div class="box" @dblclick = "handleEvent">Double Click</div>
-        <div class="box" @mousemove = "handleMouseMove">Position = ({{x}}, {{y}})</div> -->
+        <div class="box" @mousemove = "handleMouseMove">Position = ({{x}}, {{y}})</div>
+    -->
 
 
     </div>
